# janeiro-poc

./: .gitignore  pyproject.toml
cookbook/: app.py  cli.py
cookbook/db/migrations/versions/: 8576bfe735d2_.py  eb2792d13f5a_.py  f2c883124aa8_.py
example/: main.py
example/api/: __init__.py
example/api/v1/: __init__.py  accounts.py
example/db/migrations/: env.py
example/db/migrations/versions/: 0001_add_accounts_table.py
example/domain/accounts/: entity.py
example_app/: __main__.py  app.py
example_app/db/migrations/: env.py
example_app/db/migrations/versions/: 5098f5797f59_.py
example_app/domain/accounts/: entity.py  service.py
janeiro/: api.py  app.py  cli.py  config.py  constants.py  exc.py  serialize.py
janeiro/config/: __init__.py  cache.py  config.py  deserializer.py  options.py  registry.py  utils.py
janeiro/config/loader/: base.py  dictionnary.py  environment.py
janeiro/config/loaders/: __init__.py  environment.py  test.py
janeiro/plugins/: __init__.py  api_cli.py  auth.py  base.py  database.py  defaults.py  healthcheck.py  logging.py
janeiro/plugins/defaults/: __init__.py  api.py  config.py  logging.py
