[project]
name = "janeiro"
version = "0.0.1"
description = "A framework to develop web API(s)."
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = [
    "janeiro",
    "fastapi",
    "sqlalchemy",
    "framework"
]

authors = [
  {name = "Sylvan LE DEUNFF", email = "sledeunf@gmail.com" }
]

maintainers = [
  {name = "Sylvan LE DEUNFF", email = "sledeunf@gmail.com" }
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "alembic",
    "click",
    "fastapi",
    "sqlalchemy",
    "uvicorn"
]

[project.urls]
"Homepage" = "https://github.com/sylvanld/janeiro"
"Bug Reports" = "https://github.com/pypa/janeiro/issues"
"Source" = "https://github.com/sylvanld/janeiro/"
